  (David Allsopp, review by Sébastien Hinderer, YAML-fu by Stephen Dolan)

- #9527: stop including configuration when running 'clean' rules
  to avoid C dependency recomputation.
  (Gabriel Scherer, review by David Allsopp)

- #9804: Build C stubs of libraries in otherlibs/ with debug info.
  (Stephen Dolan, review by Sébastien Hinderer and David Allsopp)

### Bug fixes:

- #7902, #9556: Type-checker infers recursive type, even though -rectypes is
  off.
  (Jacques Garrigue, report by Francois Pottier, review by Leo White)

- #8747, #9709: incorrect principality warning on functional updates of records
  (Jacques Garrigue, report and review by Thomas Refis)

- #9469: Better backtraces for lazy values
  (Leo White, review by Nicolás Ojeda Bär)

- #9521, #9522: correctly fail when comparing functions
  with Closure and Infix tags.
  (Gabriel Scherer and Jeremy Yallop and Xavier Leroy,
   report by Twitter user @st_toHKR through Jun Furuse)

- #9611: maintain order of load path entries in various situations: when passing
  them to system linker, ppx contexts, etc.
  (Nicolás Ojeda Bär, review by Jérémie Dimino and Gabriel Scherer)

- #9633: ocamltest: fix a bug when certain variables set in test scripts would
  be ignored (eg `ocamlrunparam`).
  (Nicolás Ojeda Bär, review by Sébastien Hinderer)

- #9681, #9690, #9693: small runtime changes
  for the new closure representation (#9619)
  (Xavier Leroy, Sadiq Jaffer, Gabriel Scherer,
   review by Xavier Leroy and Jacques-Henri Jourdan)

- #9714, #9724: Use the C++ alignas keyword when compiling in C++.
  Fixes a bug with MSVC C++ 2015/2017. Add a terminator to the
  `caml_domain_state` structure to better ensure that members are
  correctly spaced.
  (Antonin Décimo, review by David Allsopp and Xavier Leroy)

- #9759, #9767: Spurious GADT ambiguity without -principal
  (Jacques Garrigue, report by Thomas Refis,
   review by Thomas Refis and Gabriel Scherer)
